--- a/src/sass/_example.scss
+++ b/src/sass/_example.scss
@@ -1,28 +1,37 @@
-.example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  line-height: 1.5;
-  background-color: #fff;
-  color: #2f2f37;
-  max-width: 960px;
-  padding: 16px;
+.search-form {
+  display: flex;
+  justify-content: center;
+  padding: 20px 10px;
+  background-color: rgb(87, 221, 198);
+}
+.load-more {
+  color: rgb(255, 255, 255);
+  background-color: rgb(186, 210, 8);
+  padding: 8px 10px;
+}
+.gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 13px;
+}
+.info {
+  display: flex;
+  justify-content: space-around;
+}
+img {
+  width: 100%;
+  height: 160px;
+}
+.info-item {
+  text-align: center;
 }
 
-.example code {
-  font-family: monospace;
-  font-size: 16px;
-  font-weight: 700;
-  background-color: #ff6b0a;
-  color: #fff;
-  padding: 2px 6px;
-  border-radius: 2px;
+.load-more {
+  display: block;
+  margin: 8px auto;
 }
 
-.example .background {
-  height: 240px;
-  // ❗️❗️❗️ The path to images from a SASS file
-  // is always the same as from the css folder.
-  background-image: url('../images/logo.png');
-  background-size: cover;
-  background-position: center;
+.load-more.hidden {
+  display: none;
 }
